# interactionLearner

./: .gitignore  README.md  testCom.py  testData.txt  trainDataPush.txt  trainDataPush20.txt
Master_Presentation/: beamercolorthemeprogressbar.sty  beamerouterthemeprogressbar.sty  masterPresentation.nav  masterPresentation.tex
Thesis/: MAjpoeppel.tex  documentation.tex
Thesis/contents/: 0_A_titlepage.tex  0_B_abstract.tex  0_C_citation.tex  0_header.tex  1_einleitung.tex  1_introduction.tex  1_stateOfTheArt.tex  2_concept.tex  2_environment.tex  2_evaluation.tex  2_kapitel.tex  2_realization.tex  2_stateOfTheArt.tex  3_concept.tex  3_conclusion.tex  3_fazit.tex  4_realization.tex  5_evaluation.tex  6_conclusion.tex  6_discussion.tex  7_conclusion.tex  A_abkuerzungen.tex  A_acronyms.tex  B_glossar.tex  C_declaration.tex  C_erklaerung.tex  D_references.bib  D_referenzen.bib  E_resources.tex
Thesis/images/: ModelGate.vsdx  WorldStateGate1.vsdx
Thesis/sty/: fncychapleo.sty
data/: actionVectors10Runs  actionVectors10Runs_Clean.csv  actionVectors2  actionVectors2_Clean.csv  actionVectors2_n  actionVectors3  actionVectors3_Clean.csv
gazeboPlugins/: CMakeLists.txt  actuatorPluginWorld.cc  gripperPlugin.cc  gripperPluginWorld.cc
gazeboPlugins/msgs/: CMakeLists.txt  actuatorCommand.proto  gripperCommand.proto  modelState.proto  modelState_v.proto  worldState.proto
gazeboWorlds/: basicTable.world  minimal.world  minimalWalls.world
python/: classifierTest.py  dataAnalysis.py  evalCalc.py  evalITM.py  itmTest.py  matplotlibrc  testCom.py
python/conceptLearner/: .spyderworkspace  common.py  config.py  configuration.py  gazeboInterface.py  gazeboInterface2.py  gazeboInterface3.py  gazeboInterface4.py  gazeboInterface5.py  gazeboInterface5_2D.py  gazeboInterfaceLSTM.py  inverseModel.py  itm.py  metrics.py  model.py  model2.py  model3.py  model4.py  model5.py  model6.py  modelActionFixed.py  modelActions.py  modelActions2.py  modelGate.py  modelGate_2D.py  modelGate_2D_config.py  modelInteractions.py  modelInteractions_config.py  modelLSTM.py  network.py  state1.py  state2.py  state3.py  state4.py  testfile.txt  testsuite.py  topoMaps.py
python/conceptLearner/modelCrazy/: __init__.py  model.py  network.py
python/interactionLearner/: __init__.py  aitm.py  common.py  configuration.py  gazeboInterface3.py  gazeboInterface5.py  gazeboInterface5_2D.py  inverseModel.py  model.py  modelGate.py  modelGate_2D_config.py  modelInteractions_config.py  network.py  state2_2D.py  state4.py  timing.txt  topoMaps.py
python/interactionLearner/experimentalModels/: gazeboInterface4.py  metrics.py  model6.py  modelActionFixed.py  modelActions.py  state1.py
python/interactionLearner/modelCrazy/: action.py  model.py
python/interactionLearner/predictors/: GNG.py
python/tests/: testGate.py  test_Common.py  test_Gate.py  test_Gate_2D.py  test_ITM.py  test_Interaction.py  test_InverseModel.py
tests/: CMakeLists.txt  listenerTest.cc  publisherTest.cc
